...
    const { bottom: bottomSafeArea } = useSafeAreaInsets();
    const navigation = useNavigation();
    const {colors} = useTheme();

    const { list, access_token, avoid_tolls } = props; // Destructure the destination list from props
    const handleOptimize = () => {
        navigation.navigate('Navi', { list, access_token, avoid_tolls });
      }
    return (
        <BottomSheetFooter {...props}
            style={styles.footerContainer}
            bottomInset={bottomSafeArea}>

...
                    <View style={styles.buttonContainer}>
                        <Button
                            style={styles.optimiseButton}
                            mode={'contained'}
                            icon={'navigation-variant-outline'}
                            onPress={handleOptimize}>
                            Navigate
                        </Button>

                    </View>
                </LinearGradient>
            </View>

...
